Fix breadcrums and visible text length

--- a/src/app/pages/drive/breadcrums/breadcrums.component.scss
+++ b/src/app/pages/drive/breadcrums/breadcrums.component.scss
@@ -1,78 +1,39 @@
-#directory-tree ul {
-  display: flex; /* A key part of our menu, displays items side by side, and allows reversing them */
-  flex-direction: row-reverse; /* Reverse the items */
-}
-#directory-tree-container {
-  height: 220px;
-  background-color: #cee3f8;
-}
-
-/* Menu container */
-#directory-tree {
-  display: inline-block; /* The menu will have width as needed, not 100% */
-  //position: relative;
-  //left: 50%;
-  //top: 50%;
-  //transform: translate(-50%, -50%);
-  font-family: Helvetica, sans-serif;
-  font-size: 14px;
-  line-height: 1em;
-  border-radius: 2px; /* Little curvature in the borders */
-  overflow: hidden; /* Hide everything that overflows, like shadows */
-}
-
-/* Icons */
-#directory-tree i {
-  transform: scale(1.4);
-}
-
-/* Menu */
-#directory-tree ul {
-  display: flex; /* A key part of our menu, displays items side by side, and allows reversing them */
-  flex-direction: row-reverse; /* Reverse the items */
-  /* Reset styles, overwrite browser defaults */
+/* Style the list */
+ul.breadcrumb {
+  //padding: 10px 16px;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  background-color: #eee;
+  overflow: auto;
+  max-width: 60vw;
 }
 
-#directory-tree ul li {
-  margin: 0;
+/* Display list items side by side */
+ul.breadcrumb li {
+  display: inline;
+  font-size: 18px;
 }
 
-/* Menu items */
-#directory-tree ul li a {
-  display: inline-block;
-  font-family: sans-serif;
-  font-size: 0.9em;
-  font-weight: 600;
-  padding: 12px 30px 12px 45px; /* Adjusting padding to get the proper space */
-  margin-left: -20px; /* Pull the items to the left, so the rounded right side will get over them */
-  color: white;
-  background-color: #428efe;
+/* Add a slash symbol (/) before/behind each list item */
+ul.breadcrumb li + li:before {
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
+}
+
+/* Add a color to all links inside the list */
+ul.breadcrumb li a {
+  color: #0275d8;
   text-decoration: none;
-  text-transform: uppercase;
-  border-radius: 0 100px 100px 0; /* Get the right side rounded */
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4); /* Apply the shadow */
 }
 
-/* Hover event */
-#directory-tree ul li:hover a {
-  background-color: #297efe;
+/* Add a color on mouse-over */
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
 }
 
-/* Remove the shadow for first item, last in the right side when it gets reversed */
-#directory-tree ul li:first-child a {
-  box-shadow: none;
-}
-
-/* Active item is a bit different */
-#directory-tree ul li.active a {
-  color: #428efe;
-  background-color: #eef5ff;
-}
-
-/* Remove the shadow for the active's next item, to match the design more accurately */
-#directory-tree ul li.active + li a {
-  box-shadow: none;
+::-webkit-scrollbar {
+  height: 2px; /* height of horizontal scrollbar ← You're missing this */
+  width: 4px; /* width of vertical scrollbar */
+  border: 1px solid #d5d5d5;
 }
